PL-6730 Metadata REST API controller
