# modules/rest-api/src/com/haulmont/restapi/common/RestControllerUtils.java
@@ -1,0 +1,50 @@
+/*
+ * Copyright (c) 2008-2016 Haulmont.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
+package com.haulmont.restapi.common;
+
+import com.haulmont.chile.core.model.MetaClass;
+import com.haulmont.cuba.core.global.Metadata;
+import com.haulmont.cuba.core.global.Security;
+import com.haulmont.restapi.exception.RestAPIException;
+import org.springframework.http.HttpStatus;
+
+import javax.inject.Inject;
+
+/**
+ */
+public class RestControllerUtils {
+
+    @Inject
+    protected Metadata metadata;
+
+    @Inject
+    protected Security security;
+
+    /**
+     * Finds metaClass by entityName. Throws a RestAPIException if metaClass not found
+     */
+    public MetaClass getMetaClass(String entityName) {
+        MetaClass metaClass = metadata.getClass(entityName);
+        if (metaClass == null) {
+            throw new RestAPIException("MetaClass not found",
+                    String.format("MetaClass %s not found", entityName),
+                    HttpStatus.NOT_FOUND);
+        }
+
+        return metaClass;
+    }
+}
