# modules/rest-api/src/rest-api-swagger.yaml
@@ -227,6 +227,41 @@ definitions:
       intValue:
         type: integer
 
+  entityMetadata:
+    type: object
+    properties:
+      entityName:
+        type: string
+      properties:
+        type: array
+        items:
+          type: object
+          properties:
+            name:
+              type: string
+            attributeType:
+              type: string
+              enum:
+                - DATATYPE
+                - ENUM
+                - ASSOCIATION
+                - COMPOSITION
+            type:
+              type: string
+            cardinality:
+              type: string
+              enum:
+                - NONE
+                - ONE_TO_ONE
+                - MANY_TO_ONE
+                - ONE_TO_MANY
+                - MANY_TO_MANY
+            mandatory:
+              type: boolean
+            readOnly:
+              type: boolean
+            transient:
+              type: boolean
 
 ################################################################################
 #                                   Responses                                  #
@@ -252,6 +287,8 @@ tags:
     description: Middleware services execution
   - name: Permissions
     description: Current user permissions
+  - name: Metadata
+    description: Entities metadata
 
 ################################################################################
 #                                  Security                                    #
@@ -619,6 +656,7 @@ paths:
           schema:
             $ref: '#/definitions/error'
 
+############################### Permissions ####################################
   /permissions:
     get:
       tags:
@@ -633,3 +671,94 @@ paths:
             type: array
             items:
               $ref: '#/definitions/permission'
+
+############################### Metadata #######################################
+  /meatadata/entities:
+    get:
+      tags:
+        - Metadata
+      summary: Get all entities metadata
+      description: Gets all entities metadata
+      responses:
+        200:
+          description: OK
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/entityMetadata'
+
+  /meatadata/entities/{entityName}:
+    get:
+      tags:
+        - Metadata
+      summary: Get entity metadata
+      description: Gets entity metadata
+      parameters:
+        - name: entityName
+          in: path
+          type: string
+          required: true
+          description: Entity name
+      responses:
+        200:
+          description: OK
+          schema:
+            $ref: '#/definitions/entityMetadata'
+        404:
+          description: |
+            MetaClass not found or query with the given name not found
+          schema:
+            $ref: '#/definitions/error'
+
+  /meatadata/entities/{entityName}/views:
+    get:
+      tags:
+        - Metadata
+      summary: Get all views for the entity
+      description: Gets all views for the entity
+      parameters:
+        - name: entityName
+          in: path
+          type: string
+          required: true
+          description: Entity name
+      responses:
+        200:
+          description: OK
+          schema:
+            type: array
+            items:
+              type: object
+        404:
+          description: |
+            MetaClass not found or query with the given name not found
+          schema:
+            $ref: '#/definitions/error'
+
+  /meatadata/entities/{entityName}/views/{viewName}:
+    get:
+      tags:
+        - Metadata
+      summary: Get view
+      description: Gets view
+      parameters:
+        - name: entityName
+          in: path
+          type: string
+          required: true
+          description: Entity name
+        - name: viewName
+          in: path
+          type: string
+          required: true
+          description: View name
+      responses:
+        200:
+          description: OK
+          schema:
+            type: object
+        404:
+          description: |
+            MetaClass not found or query with the given name not found
+          schema:
+            $ref: '#/definitions/error'
